# ffmpeg_opus

./: CMakeLists.txt  main.cpp
qml/: NavButton.qml  Page2.qml  RoundScrollBar.qml  main.qml
